<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_PrzesuwaczNaSilowniku" Id="{c7ba1278-3548-4e13-8976-321b6c21dbe0}" SpecialFunc="None">
    <Declaration><![CDATA[//==================================================================================================
//								RJM Maszyny sp. z o.o.
//									13.05.2022
//	Obsluga przesuwacza na siłowniku 
//	Siłownik zabieraka plus siłownik przesuwający 
//	Cykl przesuwania: wysun zabierak -> przesun -> schowaj zabierak -> powrót  
// 	v1.0	|| TC v 3.1.4024.22		|| - pierwsza wersja
//==================================================================================================
FUNCTION_BLOCK FB_PrzesuwaczNaSilowniku
VAR_INPUT
	stParametry								: DUT_PrzesuwaczNaSilowniku_Parametry;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	bCzujnik0Zabieraka						: ITF_Czujnik;
	bCzujnikMaxZabieraka					: ITF_Czujnik;
	fbElektrozaworZabieraka					: ITF_Elektozawor;
	bCzujnik0Przesuwacza					: ITF_Czujnik;
	bCzujnikMaxPrzesuwacza					: ITF_Czujnik;
	fbElektrozaworPrzesuwacza				: ITF_Elektozawor;
	fbZabierak								: FB_Silownik_Kontola (fbCzujnikPozycja0 		:= bCzujnik0Zabieraka, 
																	fbCzujnikPozycjaMax 	:= bCzujnikMaxZabieraka,
																	fbElektrozawor 			:= fbElektrozaworZabieraka);
	fbPrzesuwaczNaped						: FB_Silownik_Kontola (fbCzujnikPozycja0 		:= bCzujnik0Przesuwacza, 
																	fbCzujnikPozycjaMax 	:= bCzujnikMaxPrzesuwacza,
																	fbElektrozawor 			:= fbElektrozaworPrzesuwacza);	
	arrElementyWykonawcze 					: ARRAY [1..10] OF ITF_LogowanieBledow_ElementWykonawczy := 
														[fbZabierak.fbLBKomunikacja, 
														fbPrzesuwaczNaped.fbLBKomunikacja];
	fbLBKomunikacja							: FB_PrzesuwaczNaSilowniku_Komunikacja 
														(arrElementyWykonawcze := arrElementyWykonawcze,
														iIloscPodlementow := 2);
	bWykonajCyklPrzesuwania					: BOOL;
	bCyklPrzesuwania						: BOOL;
	bCyklPrzesuWaniaSkonczony				: BOOL;
	bBazuj									: BOOL;
	bBazowanie								: BOOL;
	bCyklBazowaniaSkonczony					: BOOL;
	bReset									: BOOL;
	bPierwszePrzejscieBazowanie				: BOOL;
	bPierwszePrzejsciePrzesuwanie			: BOOL;
	iKrokPrzesuwania						: INT := 0;
	tonChwilaPoDojechaniu					: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
]]></ST>
    </Implementation>
    <Property Name="Bazowanie" Id="{ea84dae0-db67-4001-9f56-c7d50c87da36}">
      <Declaration><![CDATA[PROPERTY Bazowanie : BOOL]]></Declaration>
      <Get Name="Get" Id="{8990b3c0-edfa-4aa4-aa06-b75bbd90f054}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Bazowanie									:= bBazuj;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="Bazuj" Id="{48299f66-cf2b-4f41-bd89-ab4fd693cdf8}">
      <Declaration><![CDATA[PROPERTY Bazuj : BOOL]]></Declaration>
      <Set Name="Set" Id="{c2df6c92-4390-4584-947f-0489e3c91278}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bBazuj										:= Bazuj;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="CyklBazowania_Praca" Id="{e436b484-17c0-47ed-a727-72ecc434ecc6}">
      <Declaration><![CDATA[METHOD PRIVATE CyklBazowania_Praca : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (NOT bPierwszePrzejscieBazowanie) THEN
	bPierwszePrzejscieBazowanie				:= TRUE;
	bCyklBazowaniaSkonczony					:= FALSE;
	fbZabierak.PrzesunDoPoczatku			:= TRUE;
END_IF

IF (fbZabierak.NaPoczatku AND NOT fbPrzesuwaczNaped.PrzesuwanieWStronePoczatku) THEN
	fbPrzesuwaczNaped.PrzesunDoPoczatku		:= TRUE;
END_IF

IF (fbPrzesuwaczNaped.NaPoczatku AND fbZabierak.NaPoczatku) THEN
	bPierwszePrzejscieBazowanie				:= FALSE;
	bCyklBazowaniaSkonczony					:= TRUE;
	CyklBazowania_Praca						:= TRUE;
ELSE
	CyklBazowania_Praca						:= FALSE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Property Name="CyklPrzesuwania" Id="{9dbd02be-7b8b-4bc5-881c-396938a1e639}">
      <Declaration><![CDATA[PROPERTY CyklPrzesuwania : BOOL]]></Declaration>
      <Get Name="Get" Id="{362a1c75-df31-419f-9ede-ed576cdc01f3}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[CyklPrzesuwania								:= bCyklPrzesuwania;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="CyklPrzesuwania_Praca" Id="{c5710e17-cb66-4931-8ad1-c66f04ccc386}">
      <Declaration><![CDATA[METHOD CyklPrzesuwania_Praca : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF (NOT bPierwszePrzejsciePrzesuwanie) THEN
	bPierwszePrzejsciePrzesuwanie			:= TRUE;
	bCyklPrzesuWaniaSkonczony				:= FALSE;
	fbZabierak.PrzesunDoKonca				:= TRUE;
	tonChwilaPoDojechaniu.IN				:= FALSE;
	iKrokPrzesuwania						:= 1;
END_IF

CASE iKrokPrzesuwania OF
	1	:
	IF (fbZabierak.NaKoncu) THEN
		fbPrzesuwaczNaped.PrzesunDoKonca	:= TRUE;
		iKrokPrzesuwania					:= 10;
		CyklPrzesuwania_Praca				:= TRUE;
	END_IF
	10	:
	IF (fbPrzesuwaczNaped.NaKoncu) THEN
		tonChwilaPoDojechaniu.IN			:= TRUE;
		iKrokPrzesuwania					:= 20;
		CyklPrzesuwania_Praca				:= TRUE;
	END_IF
	20	:
	IF (tonChwilaPoDojechaniu.Q) THEN
		tonChwilaPoDojechaniu.IN			:= FALSE;
		fbZabierak.PrzesunDoKonca			:= TRUE;
		iKrokPrzesuwania					:= 30;
		CyklPrzesuwania_Praca				:= TRUE;
	END_IF
	30	:
	IF (fbZabierak.NaPoczatku) THEN
		fbPrzesuwaczNaped.PrzesunDoPoczatku	:= TRUE;
		iKrokPrzesuwania					:= 40;
		CyklPrzesuwania_Praca				:= TRUE;
	END_IF
	40	:
	IF (fbPrzesuwaczNaped.NaPoczatku) THEN
		iKrokPrzesuwania					:= 50;
		CyklPrzesuwania_Praca				:= TRUE;
		bCyklPrzesuWaniaSkonczony			:= TRUE;
	END_IF
	50	:
		iKrokPrzesuwania					:= 0;
		CyklPrzesuwania_Praca				:= FALSE;
END_CASE



]]></ST>
      </Implementation>
    </Method>
    <Property Name="CyklPrzesuWaniaSkonczony" Id="{67556867-1f57-4eb1-a7b8-fe1b44636d00}">
      <Declaration><![CDATA[PROPERTY CyklPrzesuWaniaSkonczony : BOOL]]></Declaration>
      <Get Name="Get" Id="{c849afb2-5ecd-4244-9b25-a1e4a3a4edda}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[CyklPrzesuWaniaSkonczony					:= bCyklPrzesuWaniaSkonczony;
]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="FB_init" Id="{1ce11768-98bf-4742-be1e-5a2040e34f8c}">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
	bCzujnik0Zabieraka						: ITF_Czujnik;
	bCzujnikMaxZabieraka					: ITF_Czujnik;
	fbElektrozaworZabieraka					: ITF_Elektozawor;
	bCzujnik0Przesuwacza					: ITF_Czujnik;
	bCzujnikMaxPrzesuwacza					: ITF_Czujnik;
	fbElektrozaworPrzesuwacza				: ITF_Elektozawor;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bCzujnik0Zabieraka					:= bCzujnik0Zabieraka;			     
THIS^.bCzujnikMaxZabieraka					:= bCzujnikMaxZabieraka;		    
THIS^.fbElektrozaworZabieraka				:= fbElektrozaworZabieraka;		 
THIS^.bCzujnik0Przesuwacza					:= bCzujnik0Przesuwacza;		    
THIS^.bCzujnikMaxPrzesuwacza				:= bCzujnikMaxPrzesuwacza;		  
THIS^.fbElektrozaworPrzesuwacza				:= fbElektrozaworPrzesuwacza;

THIS^.fbZabierak.FB_init (FALSE, FALSE, bCzujnik0Zabieraka, bCzujnikMaxZabieraka, fbElektrozaworZabieraka);
THIS^.fbPrzesuwaczNaped.FB_init (FALSE, FALSE, bCzujnik0Przesuwacza, bCzujnikMaxPrzesuwacza, fbElektrozaworPrzesuwacza);
 ]]></ST>
      </Implementation>
    </Method>
    <Method Name="Praca" Id="{44cee759-01b2-476e-b3ae-9fcfed73cbf4}">
      <Declaration><![CDATA[METHOD Praca : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//---------------Resetowanie zmiennych
	IF (bReset) THEN
		Resetowanie ();
	END_IF
//---------------Resetowanie zmiennych
//---------------Bazowanie siłowników - powrót do poczatku
	IF (bBazuj) THEN
		bBazowanie								:= TRUE;
	END_IF
	IF (bBazowanie) THEN
		bBazowanie								:= CyklBazowania_Praca ();
	END_IF
//---------------Bazowanie siłowników - powrót do poczatku
//---------------Cykl przesuwnaia - koniec gora dol poczatek
	IF (bWykonajCyklPrzesuwania) THEN
		bCyklPrzesuwania						:= TRUE;
	END_IF
	tonChwilaPoDojechaniu (PT := REAL_TO_TIME (stParametry.rCzasNaKoncu));
	IF (bCyklPrzesuwania) THEN
		bCyklPrzesuwania						:= CyklPrzesuwania_Praca ();
	END_IF
//---------------Cykl przesuwnaia - koniec gora dol poczatek
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Resetowanie" Id="{3266a3b4-85c7-4870-b306-21ac7a9cbdf6}">
      <Declaration><![CDATA[METHOD PRIVATE Resetowanie : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bWykonajCyklPrzesuwania						:= FALSE;
bCyklPrzesuwania							:= false;
bCyklPrzesuWaniaSkonczony					:= false;
bBazuj										:= false;
bBazowanie									:= false;
bCyklBazowaniaSkonczony						:= FALSE;
bPierwszePrzejscieBazowanie					:= FALSE;
bPierwszePrzejsciePrzesuwanie				:= FALSE;
tonChwilaPoDojechaniu.IN					:= FALSE;


bReset										:= FALSE;
]]></ST>
      </Implementation>
    </Method>
    <Property Name="Resetuj" Id="{da194d34-255f-4986-bd5f-ef9469dd78f1}">
      <Declaration><![CDATA[PROPERTY Resetuj : BOOL]]></Declaration>
      <Set Name="Set" Id="{01fa9a79-b8bf-4b07-b476-18d11ab8ba51}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bReset										:=Resetuj;
]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="WykonajCyklPrzesuwania" Id="{ae9011c0-d4ee-453e-b80c-6b486d3263af}">
      <Declaration><![CDATA[PROPERTY WykonajCyklPrzesuwania : BOOL]]></Declaration>
      <Set Name="Set" Id="{4d65ef21-a11d-49b0-9652-ef6880dd4a1b}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bWykonajCyklPrzesuwania						:= WykonajCyklPrzesuwania;

]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_PrzesuwaczNaSilowniku">
      <LineId Id="9" Count="0" />
      <LineId Id="33" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.Bazowanie.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.Bazuj.Set">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.CyklBazowania_Praca">
      <LineId Id="5" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="17" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="21" Count="3" />
      <LineId Id="19" Count="0" />
      <LineId Id="25" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.CyklPrzesuwania.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.CyklPrzesuwania_Praca">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="21" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="37" Count="1" />
      <LineId Id="41" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="42" Count="2" />
      <LineId Id="60" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="47" Count="2" />
      <LineId Id="51" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="2" />
      <LineId Id="56" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="57" Count="1" />
      <LineId Id="63" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="35" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="6" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.CyklPrzesuWaniaSkonczony.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.FB_init">
      <LineId Id="14" Count="4" />
      <LineId Id="7" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="1" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.Praca">
      <LineId Id="17" Count="0" />
      <LineId Id="5" Count="2" />
      <LineId Id="9" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="29" Count="1" />
      <LineId Id="12" Count="2" />
      <LineId Id="19" Count="1" />
      <LineId Id="32" Count="3" />
      <LineId Id="26" Count="2" />
      <LineId Id="24" Count="0" />
      <LineId Id="23" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.Resetowanie">
      <LineId Id="11" Count="3" />
      <LineId Id="6" Count="2" />
      <LineId Id="18" Count="2" />
      <LineId Id="9" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.Resetuj.Set">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_PrzesuwaczNaSilowniku.WykonajCyklPrzesuwania.Set">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>